libview: Implement AtkComponent for pages

https://bugzilla.gnome.org/show_bug.cgi?id=728673